--- a/debian/changelog
+++ b/debian/changelog
@@ -38,6 +38,7 @@ dpkg (1.15.6) UNRELEASED; urgency=low
   [ Updated programs translations ]
   * Simplified Chinese (Aron Xua). Closes: #558794
   * Swedish (Peter Krefting).
+  * Slovak (Ivan Masár). Closes: #559269
 
  -- Raphaël Hertzog <hertzog@debian.org>  Tue, 17 Nov 2009 17:24:47 +0100
 
