--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dpkg (1.15.5.4) UNRELEASED; urgency=low
+dpkg (1.15.5.4) unstable; urgency=low
 
   * Fix Dpkg::Index::get() and remove(). Thanks to Roderich Schupp
     <roderich.schupp@googlemail.com> for the patch. Closes: #558595
@@ -15,7 +15,7 @@ dpkg (1.15.5.4) UNRELEASED; urgency=low
     Debian patch in format "3.0 (quilt)".
   * Fix Debian changelog parser so that the trailer line is again checked.
 
- -- Raphael Hertzog <hertzog@debian.org>  Sun, 29 Nov 2009 18:15:16 +0100
+ -- Raphael Hertzog <hertzog@debian.org>  Mon, 07 Dec 2009 09:24:31 +0100
 
 dpkg (1.15.5.3) unstable; urgency=low
 
