Add sparc64 to cputable
Closes: #523456

--- a/debian/changelog
+++ b/debian/changelog
@@ -25,6 +25,8 @@ dpkg (1.15.6) UNRELEASED; urgency=low
   * Make “dpkg-statoverride --update --add” fail if it cannot update the
     mode and owner of the file. This would fail later on when dpkg itself
     applies the overrides, so better to signal this earlier.
+  * Add sparc64 to cputable. Thanks to Aurelien Jarno <aurel32@debian.org>.
+    Closes: #523456
 
   [ Updated man page translations ]
   * French (Christian Perrier): correcting inconsistencies for the translation
