dpkg-divert: Do not allow diverting a file to itself
This was causing the file to get removed.

Closes: #312206

--- a/debian/changelog
+++ b/debian/changelog
@@ -27,6 +27,8 @@ dpkg (1.15.6) UNRELEASED; urgency=low
     applies the overrides, so better to signal this earlier.
   * Add sparc64 to cputable. Thanks to Aurelien Jarno <aurel32@debian.org>.
     Closes: #523456
+  * Do not allow diverting a file to itself, which makes the file to get
+    removed. Closes: #312206
 
   [ Updated man page translations ]
   * French (Christian Perrier): correcting inconsistencies for the translation
