libdpkg: Properly increment seen fields in a stanza
The current code was not incrementing the contents of the pointed area,
but the pointer itself, which was making the check for already seen
(duplicate) fields a no-op, and thus non-fatal, contrary to what was
intended originally.

This should not be a problem in general as the tools in charge of
generating binary packages error out in case of duplicate fields, so
there should not be many broken packages on the wild.

This was spotted by a run with the clang static analyzer.

--- a/debian/changelog
+++ b/debian/changelog
@@ -29,6 +29,10 @@ dpkg (1.15.6) UNRELEASED; urgency=low
     Closes: #560010
   * Do not allow diverting a file to itself, which makes the file to get
     removed. Closes: #312206
+  * Make the check for duplicate fields in a stanza in libdpkg actually work,
+    which now makes it fatal, as was intended originally. This should not
+    cause problems for anything using dpkg-dev to build packages as those
+    are already fatal on that case.
 
   [ Updated man page translations ]
   * French (Christian Perrier): correcting inconsistencies for the translation
