German dselect translation update
Update to 278t.

--- a/debian/changelog
+++ b/debian/changelog
@@ -37,6 +37,9 @@ dpkg (1.15.6) UNRELEASED; urgency=low
   [ Updated dpkg translations ]
   * German (Sven Joachim).
 
+  [ Updated dselect translations ]
+  * German (Sven Joachim).
+
   [ Updated man page translations ]
   * French (Christian Perrier): correcting inconsistencies for the translation
     of "original" here and there. Thanks to Julien Valroff for pointing this.
