--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+dpkg (1.15.5.5) UNRELEASED; urgency=low
+
+  * Allow again new lines in dpkg-source and dpkg-genchanges on substvar and
+    maintainer arguments.
+
+ -- Guillem Jover <guillem@debian.org>  Tue, 22 Dec 2009 09:45:08 +0100
+
 dpkg (1.15.5.4) unstable; urgency=low
 
   * Fix Dpkg::Index::get() and remove(). Thanks to Roderich Schupp
