--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-dpkg (1.15.5.5) UNRELEASED; urgency=low
+dpkg (1.15.5.5) unstable; urgency=low
 
   * Allow again new lines in dpkg-source and dpkg-genchanges on substvar and
     maintainer arguments.
 
- -- Guillem Jover <guillem@debian.org>  Tue, 22 Dec 2009 09:45:08 +0100
+ -- Guillem Jover <guillem@debian.org>  Tue, 22 Dec 2009 09:49:49 +0100
 
 dpkg (1.15.5.4) unstable; urgency=low
 
