--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+dpkg (1.15.5.6) UNRELEASED; urgency=low
+
+  * dpkg-source: with format "3.0 (quilt)" ensure quilt's .pc directory is
+    created before trying to register a new patch in .pc/applied-patches.
+    Thanks to Tommi Vainikainen <thv+debian@iki.fi> for the report and the
+    patch.
+
+ -- Raphael Hertzog <hertzog@debian.org>  Wed, 23 Dec 2009 17:05:43 +0100
+
 dpkg (1.15.5.5) unstable; urgency=low
 
   * Allow again new lines in dpkg-source and dpkg-genchanges on substvar and
