Updated dpkg French translation

--- a/debian/changelog
+++ b/debian/changelog
@@ -35,7 +35,11 @@ dpkg (1.15.6) UNRELEASED; urgency=low
     are already fatal on that case.
 
   [ Updated dpkg translations ]
+  * French (Christian PERRIER).
   * German (Sven Joachim).
+  * Simplified Chinese (Aron Xua). Closes: #558794
+  * Slovak (Ivan Masár). Closes: #559269
+  * Swedish (Peter Krefting).
 
   [ Updated dselect translations ]
   * German (Sven Joachim).
@@ -48,11 +52,6 @@ dpkg (1.15.6) UNRELEASED; urgency=low
 
   [ Updated scripts translations ]
   * German (Helge Kreutzmann).
-
-  [ Updated programs translations ]
-  * Simplified Chinese (Aron Xua). Closes: #558794
-  * Slovak (Ivan Masár). Closes: #559269
-  * Swedish (Peter Krefting).
 
  -- Raphaël Hertzog <hertzog@debian.org>  Tue, 17 Nov 2009 17:24:47 +0100
 
