Fix misspellings of “explicitly” all over the place

--- a/debian/changelog
+++ b/debian/changelog
@@ -34,6 +34,7 @@ dpkg (1.15.6) UNRELEASED; urgency=low
     cause problems for anything using dpkg-dev to build packages as those
     are already fatal on that case.
   * Add new deb-split(5) man page.
+  * Fix misspellings of “explicitly” all over the place.
 
   [ Updated dpkg translations ]
   * French (Christian PERRIER).
@@ -551,7 +552,7 @@ dpkg (1.15.1) unstable; urgency=low
     version means that the symbol has always existed in all versions of the
     package.
   * When dpkg delegates to dpkg-query or dpkg-deb to do the actual work, add
-    the "--" marker to explicitely document the end of options so that
+    the "--" marker to explicitly document the end of options so that
     arguments starting with a dash are not interpreted as options.
     Closes: #293163
     Thanks to Bill Allombert for the patch.
@@ -2031,7 +2032,7 @@ dpkg (1.14.6) unstable; urgency=low
   * Implement support for Homepage field. Closes: #142324
   * Ignore XB- fields instead of XC- fields from control file binary package
     stanzas in dpkg-genchanges.
-  * Explicitely ignore all known fields from the control file source package
+  * Explicitly ignore all known fields from the control file source package
     stanza in dpkg-genchanges, instead of leaving unknown fields unwarned.
   * Implement support for Vcs-Browser, Vcs-Arch, Vcs-Bzr, Vcs-Cvs, Vcs-Darcs,
     Vcs-Git, Vcs-Hg, Vcs-Mtn and Vcs-Svn fields in control file source
