--- a/man/dpkg-trigger.1
+++ b/man/dpkg-trigger.1
@@ -10,7 +10,7 @@ dpkg\-trigger \- a package trigger utility
 .RI [ option "...] " command
 .
 .SH DESCRIPTION
-\fBdpkg\-trigger\fP is a tool to explicitely activate triggers and check
+\fBdpkg\-trigger\fP is a tool to explicitly activate triggers and check
 for its support on the running \fBdpkg\fP.
 .PP
 This can be used by maintainer scripts in complex and conditional
