Carry over fix for misspelling from ad3a4ff9fd8ae6ddda77dfb143cc250d65295cd1

--- a/scripts/po/fr.po
+++ b/scripts/po/fr.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: fr\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2009-11-27 18:45+0100\n"
-"PO-Revision-Date: 2009-12-30 15:24+0100\n"
+"PO-Revision-Date: 2010-01-03 16:41+0100\n"
 "Last-Translator: Christian Perrier <bubulle@debian.org>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -923,7 +923,7 @@ msgid ""
 "Options:\n"
 "  -p<package>              generate symbols file for package.\n"
 "  -P<packagebuilddir>      temporary build dir instead of debian/tmp.\n"
-"  -e<library>              explicitely list libraries to scan.\n"
+"  -e<library>              explicitly list libraries to scan.\n"
 "  -v<version>              version of the packages (defaults to\n"
 "                           version extracted from debian/changelog).\n"
 "  -c<level>                compare generated symbols file with the\n"
