--- a/scripts/po/ru.po
+++ b/scripts/po/ru.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: dpkg 1.15.3.1\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2009-11-27 18:45+0100\n"
-"PO-Revision-Date: 2009-08-18 21:04+0400\n"
+"PO-Revision-Date: 2010-01-03 16:42+0100\n"
 "Last-Translator: Yuri Kozlov <yuray@komyakino.ru>\n"
 "Language-Team: Russian <debian-l10n-russian@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -888,7 +888,7 @@ msgid ""
 "Options:\n"
 "  -p<package>              generate symbols file for package.\n"
 "  -P<packagebuilddir>      temporary build dir instead of debian/tmp.\n"
-"  -e<library>              explicitely list libraries to scan.\n"
+"  -e<library>              explicitly list libraries to scan.\n"
 "  -v<version>              version of the packages (defaults to\n"
 "                           version extracted from debian/changelog).\n"
 "  -c<level>                compare generated symbols file with the\n"
