--- a/scripts/po/ca.po
+++ b/scripts/po/ca.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: dpkg 1.13.22\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2009-11-27 18:45+0100\n"
-"PO-Revision-Date: 2006-12-04 13:59+0100\n"
+"PO-Revision-Date: 2010-01-03 16:40+0100\n"
 "Last-Translator: Jordi Mallach <jordi@debian.org>\n"
 "Language-Team: Catalan <debian-l10n-catalan@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -706,7 +706,7 @@ msgid ""
 "Options:\n"
 "  -p<package>              generate symbols file for package.\n"
 "  -P<packagebuilddir>      temporary build dir instead of debian/tmp.\n"
-"  -e<library>              explicitely list libraries to scan.\n"
+"  -e<library>              explicitly list libraries to scan.\n"
 "  -v<version>              version of the packages (defaults to\n"
 "                           version extracted from debian/changelog).\n"
 "  -c<level>                compare generated symbols file with the\n"
