--- a/scripts/po/pl.po
+++ b/scripts/po/pl.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: dpkg 1.15.4\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2009-11-27 18:45+0100\n"
-"PO-Revision-Date: 2009-09-22 16:17+0100\n"
+"PO-Revision-Date: 2010-01-03 16:42+0100\n"
 "Last-Translator: Wiktor Wandachowicz <siryes@gmail.com>\n"
 "Language-Team: Polish <debian-l10n-polish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -870,7 +870,7 @@ msgid ""
 "Options:\n"
 "  -p<package>              generate symbols file for package.\n"
 "  -P<packagebuilddir>      temporary build dir instead of debian/tmp.\n"
-"  -e<library>              explicitely list libraries to scan.\n"
+"  -e<library>              explicitly list libraries to scan.\n"
 "  -v<version>              version of the packages (defaults to\n"
 "                           version extracted from debian/changelog).\n"
 "  -c<level>                compare generated symbols file with the\n"
